# fethr

./: .gitignore  .gitignore.txt  CLAUDE.md  CLEANUP_MANIFEST.md  CLEANUP_SUMMARY.md  DICTIONARY_FIX_SUMMARY.md  FILLER_TEST_EXAMPLES.md  FINAL_FILLER_REMOVAL_STATUS.md  NEXT_STEPS.md  README.md  STRIPE_WEBHOOK_SETUP.md  SYMSPELL_INTEGRATION.md  cleanup_agents.md  cleanup_master.md  debug_auth_flow.md  debug_stats.sql  debug_transcription.js  dev_log.md  filler_removal_analysis.md  filler_removal_final_fixes.md  fix_permissions.sql  index.html  package-lock.json  package.json  subscriptions_rows (10).csv  supabase_safety_improvements.md  tailwind.config.js  tash  test_after_fix.sql  test_stats.md  timezone_localization_plan.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: AUDIO_CONVERSION.md
public/guidelines/: brand-guide.md  colors.json
src/: App.tsx  HotkeyManager.ts  README.md  dev_log.md  index.css  main.tsx  test_window_drag.js  types.d.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  SMART_FORMATTING.md  build.rs  config.default.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: simple_whisper_solution.py
src-tauri/resources/sounds/: README.md
src-tauri/src/: ai_actions_manager.rs  audio_devices.rs  audio_manager.rs  audio_manager_rs.rs  auth_manager.rs  auth_manager_chunk.txt  common_words.rs  config.rs  custom_prompts.rs  dictionary_corrector.rs  dictionary_manager.rs  fuzzy_dictionary.rs  lib.rs  main.rs  ngram_builder.rs  smart_formatter.rs  sound_commands.rs  sound_player.rs  stats_queue.rs  stripe_manager.rs  supabase_manager.rs  transcription.rs  user_statistics.rs  whisper.rs  whisper_variations.rs  word_usage_tracker.rs
src-tauri/training_data/: transcription_corpus.txt
src/components/: HistoryItemEditor.tsx  LiveWaveform.tsx  LoggedOutState.tsx  LoginForm.tsx  MainLayout.tsx  RecordingController.tsx  RecordingPill.tsx  SettingsSection.tsx  SubscriptionStatus.tsx  TranscriptionControls.css  TranscriptionControls.tsx  TranscriptionFallback.tsx
src/components/settings/: AppearanceSettingsTab.tsx  AudioDeviceSelector.tsx  DictionarySettingsTab.tsx  HotkeySelector.tsx  MicrophoneTester.tsx  PillPositionSelector.tsx  WhisperModelSelector.tsx
src/components/ui/: dropdown-menu.tsx  gradient-button.tsx  gradient-slider.tsx  progress.tsx  scroll-area.tsx  select.tsx  slider.tsx  tabs.tsx  tooltip.tsx
src/hooks/: useSubscription.ts
src/lib/: supabaseClient.ts  utils.ts
src/models/: index.ts
src/pages/: DictionaryPage.tsx  EditorPage.tsx  HistoryPage.tsx  HomePage.tsx  PaymentCancelPage.tsx  PaymentSuccessPage.tsx  PillPage.tsx  Recorder.tsx  SettingsPage.tsx
src/types/: audiobuffer-to-wav.d.ts
src/utils/: AudioManager.ts  LocalTranscriptionManager.ts  TranscriptionService.ts  audioUtils.ts  circuitBreaker.ts  clipboardUtils.ts  supabaseAuth.ts  timezone.ts
supabase/functions/: deno.json
supabase/functions/create-checkout/: index.ts
supabase/functions/stripe-webhook/: index.ts
supabase/migrations/: 20250102000000_lifetime_stats_and_daily_tracking.sql  20250103000000_timezone_aware_statistics.sql  20250104000000_fix_daily_activity_columns.sql  20250701230000_fix_cumulative_stats.sql  20250702000000_comprehensive_dashboard_stats.sql  20250703190000_fix_dashboard_stats_data_source.sql  20250703191500_fix_ambiguous_columns_in_stats.sql  20250703192000_fix_column_qualification_in_stats.sql  20250703194000_fix_increment_transcription_stats_constraint.sql  create_user_statistics.sql  create_user_statistics_safe.sql  fix_streak_calculation.sql
tasks/: todo.md
