[package]
name = "fethr"
version = "0.1.0"
description = "A lightweight voice transcription app"
authors = ["Fethr Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "clipboard-read-text", "clipboard-write-text", "fs-all", "path-all", "window-all", "notification-all", "dialog-message", "shell-open", "system-tray", "global-shortcut-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
device_query = "3.0.1"
tokio = { version = "1.32", features = ["full"] }
# Simple dependencies for local transcription
tempfile = "3.3.0"    # For temporary file handling
enigo = "0.1.2"       # For simulating keyboard input to paste text
# Dependencies for file handling and operations
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "blocking"] }
zip = "0.6.6"           # For extracting zip files
futures-util = "0.3.28" # For async stream processing
arboard = "3.2.0"       # For clipboard operations
tokio-stream = "0.1.14" # For async streaming
dirs = "5.0.1"          # For finding home directory
audrey = "0.3.0"        # For audio processing
rubato = "0.12.0"       # For audio resampling
scopeguard = "1.2.0"    # For RAII-style cleanup
chrono = "0.4"  # Add chrono dependency

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
