[package]
name = "fethr"
version = "0.1.0"
description = "A lightweight voice transcription app"
authors = ["Fethr Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8.2", features = [ "http-request", "path-all", "notification-all", "shell-open", "clipboard-write-text", "fs-all", "window-all", "global-shortcut-all", "dialog-message", "clipboard-read-text", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
device_query = "3.0.1"
tokio = { version = "1", features = ["full"] }
# Simple dependencies for local transcription
tempfile = "3.3"    # For temporary file handling
enigo = "0.2.0"
# Dependencies for file handling and operations
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "blocking"] }
zip = "0.6.6"           # For extracting zip files
futures-util = "0.3.28" # For async stream processing
arboard = "3.5.0"       # For clipboard operations
tokio-stream = "0.1.14" # For async streaming
dirs = "5.0.1"          # For finding home directory
audrey = "0.3.0"        # For audio processing
rubato = "0.12.0"       # For audio resampling
scopeguard = "1.1"    # For RAII-style cleanup
chrono = { version = "0.4", features = ["serde"] }  # Add chrono with serde feature
cpal = "0.14.2"          # For audio input/output handling
hound = "3.5.1"          # For WAV file handling
uuid = { version = "1.3", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
crossbeam-channel = "0.5"
lazy_static = "1.4.0"
mpsc = "0.1"
# rdev = "0.5.3" # Removed - using Tauri's built-in GlobalShortcut instead
# Added dependencies for configuration management
directories = "5.0"      # For finding standard config/data directories
toml = "0.8"             # For parsing TOML config files
once_cell = "1.19"       # For ensuring config is loaded only once safely

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
